style.css
/* ... */
[data-color-mode="dark"] .starter-grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: 1fr;
  grid-column-gap: 10px;
  grid-row-gap: 10px;
}

[data-color-mode="dark"] .starter-card {
  display: block;
  justify-content: center;
  text-align: center;
  border: 2px solid var(--dg-dark-gray);
  background: var(--md-code-background);
  color: var(--color-text-default);
  padding: 8px 16px;
  text-decoration: none !important;
  border-radius: 8px;
}

[data-color-mode="dark"] .starter-card:hover {
  border: 2px solid var(--color-link-default);
}

/**
Override for "header-top" search button position.
*/

.rm-Header .rm-Header-top .rm-Container div:last-child {
	flex-direction: row-reverse;
}

/**
Resets for "header-bottom" nav.
*/

[data-color-mode="dark"] .rm-Header-bottom-link.Button:active,
[data-color-mode="dark"] .rm-Header-bottom-link.Button:focus-within {
  border-color: transparent !important;
}

[data-color-mode="dark"] .rm-Header-bottom-link:active,
[data-color-mode="dark"] .rm-Header-bottom-link {
  border: 0px solid transparent !important;
  border-bottom: solid 3px transparent !important;
  border-radius: 0px !important;
  background-color: transparent !important;
  outline: 0px !important;
  box-shadow: 3px 1000px 1px #101014 inset !important;
  padding: 16px !important;
}

/**
Styling for "header-bottom" nav.
*/

[data-color-mode="dark"] .rm-Container > nav {
  padding-bottom: 0px;
}

[data-color-mode="dark"] a.rm-Header-bottom-link:active,
[data-color-mode="dark"] a.rm-Header-bottom-link:hover,
[data-color-mode="dark"] a.rm-Header-bottom-link.active {
  background: linear-gradient(
    85.5deg,
    rgba(238, 2, 139, 1) 5.66%,
    rgba(174, 41, 255, 1) 99.14%
  ) !important;
  box-shadow: 3px 1000px 1px #101014 inset !important;
  background-origin: border-box !important;
}

/**
Styling for version pop-up box
*/
[data-color-mode="dark"] .tippy-box .Menu.Menu_light {
  background-image: linear-gradient(
    85.5deg,
    rgba(238, 2, 139, 0.4) 5.66%,
    rgba(174, 41, 255, 0.4) 99.14%
  );
  box-shadow: 2px 1000px 1px #101014 inset;
  background-origin: border-box;
  border: solid 2px transparent;
}

/**
Styling for glossary item and pop-up box
*/
[data-color-mode="dark"] .GlossaryItem-trigger {
  border-bottom: 2px solid var(--color-link-default);
  border-style: dashed;
  border-top: none;
  border-left: none;
  border-right: none;
  cursor: pointer;
}

[data-color-mode="dark"] .GlossaryItem-tooltip-content {
  background-image: linear-gradient(
    85.5deg,
    rgba(238, 2, 139, 0.4) 5.66%,
    rgba(174, 41, 255, 0.4) 99.14%
  );
  box-shadow: 2px 1000px 1px #101014 inset;
  background-origin: border-box;
  border: solid 2px transparent;
}

/**
Styling the API ref parameters table, playground, request examples, and response.
*/

[data-color-mode="dark"] .rm-APILogInfo {
  --APILogInfo-bg: var(--md-code-background) !important;
}

[data-color-mode="dark"] .rm-APILogsTable {
  --APILogsTable-bg: var(--md-code-background) !important;
}

[data-color-mode="dark"] .InputGroup {
  --APIAuthInputGroup-bg: var(--md-code-background) !important;
}

[data-color-mode="dark"] .rm-PlaygroundRequest {
  --APIRequest-bg: var(--md-code-background) !important;
}

[data-color-mode="dark"]
  .rm-PlaygroundRequest
  .CodeSnippet
  .CodeMirror-gutters {
  background: var(--md-code-background) !important;
}

[data-color-mode="dark"] .rm-PlaygroundResponse {
  --APIResponse-bg: var(--md-code-background) !important;
}

[data-color-mode="dark"] .rm-ParamContainer {
  --ParamContainer-bg: var(--md-code-background) !important;
  --ParamContainer-bg-alt: var(--md-code-background) !important;
}

[data-color-mode="dark"] .rm-APIResponseSchemaPicker {
  --APIResponseSchemaPicker-bg: var(--md-code-background) !important;
  --APIResponseSchemaPicker-bg-alt: var(--md-code-background) !important;
  --APIResponseSchemaPicker-bg-hover: #1c1c20 !important;
}

[data-color-mode="dark"] .rm-Guides_loading {
  --Spinner-element: #1c1c20 !important;
  --Spinner-ring: #00e878 !important;
}

/**
Styling sidebar links.
*/

[data-color-mode="dark"] body .rm-Sidebar a:hover,
[data-color-mode="dark"] body .rm-Sidebar a:focus {
  background: none;
}

[data-color-mode="dark"] body .rm-Sidebar a.active {
  color: #ef4ea2;
  background: none;
}

[data-color-mode="dark"] body a.rm-Sidebar-link:hover {
  color: var(--color-link-default);
}

/**
Styling search background.
*/

[data-color-mode="dark"] #AppSearch {
  --AlgoliaSearch-background: 16, 16, 20 !important;
}

/**
Styling code-blocks and tables in the reference and inline code everywhere.
*/

[data-color-mode="dark"] .App .rm-SuggestedEdits,
[data-color-mode="dark"] .App .rm-SuggestionDiff,
[data-color-mode="dark"] .App .rm-Guides,
[data-color-mode="dark"] .App .rm-ReferenceMain,
[data-color-mode="dark"] .App .rm-Changelog,
[data-color-mode="dark"] .App .rm-Discuss,
[data-color-mode="dark"] .App .rm-CustomPage {
  --md-code-background: #101014 !important;
  --md-code-tabs: transparent !important;
  --table-edges: #3a4348 !important;
  --table-head: var(--md-code-background) !important;
  --table-stripe: var(--md-code-background) !important;
}

[data-color-mode="dark"] *:not(pre) > code {
  border: 1px solid #2c2c33 !important;
  color: #fef0c7;
}

[data-color-mode="dark"] .CodeTabs-inner pre {
  border-top-left-radius: 0px !important;
  border-bottom-left-radius: 5px !important;
  border-bottom-right-radius: 5px !important;
}

[data-color-mode="dark"] .CodeTabs-toolbar {
  align-items: center;
  background-color: #28282b;
  justify-content: start;
}

[data-color-mode="dark"] .CodeTabs-toolbar button {
  padding-top: 0.6em;
}
/* ... */

